ajouté le titre pour le dashboard

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
    <link rel="stylesheet" href="/media/css/style.css" />
-   <title>{% block title %}Mon blog sur les crêpes bretonnes{% endblock %}</title>
+   <title>{% block title %}Dashboard élève{% endblock %}</title>
 </head>
 <body>
 <header>Webmath</header>
